# postgres-axi

./: .gitignore  README.md  pyproject.toml
skills/postgres-axi/: SKILL.md
skills/postgres-axi/agents/: openai.yaml
src/postgres_axi/: __init__.py  adapter.py  cli.py  format.py
tests/: test_adapter.py  test_cli.py  test_dispatch.py  test_format.py  test_run.py
