[project]
name = "postgres-axi"
version = "0.1.0"
description = "Agent-ergonomic CLI facade for crystaldba/postgres-mcp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "postgres-mcp",
]

[dependency-groups]
dev = [
    "pytest",
]

[project.scripts]
postgres-axi = "postgres_axi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/postgres_axi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
